feat: User- and SellerProfile management(access and update by current logged in user/seller) Fix seller profile update to enforce unique contact email and company name - Add GET /api/users/me/profile endpoint for user's own profile - Add PATCH /api/users/me/profile endpoint to update user's own profile